update versions; fixes for java 18